--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<body>
 	
 		<div class="container">
-    		
+    		This 2 bedroom house is located at 244 South Avenue, Bradford PA.
+		It sits on a 1/2 acre lot.
+		
     		
 		</div><!-- /.container -->
 		<footer>
