--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 		<div class="container">
     		This 2 bedroom house is located at 244 South Avenue, Bradford PA.
-		It sits on a 1/2 acre lot.
+		<p>It sits on a 1/2 acre lot.
 		
     		
 		</div><!-- /.container -->
