--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 		<div class="container">
     		This 2 bedroom house is located at 244 South Avenue, Bradford PA.
 		<p>It sits on a 1/2 acre lot.
-		
-    		
+		<p><img src="1.jpg" >
+    		<p><img src="2.jpg" >
+		<p><img src="3.jpg" >
+		<p><img src="4.jpg" >
+		<p><img src="5.jpg" >
+		<p><img src="6.jpg" >
 		</div><!-- /.container -->
 		<footer>
     		<ul>
